--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,6 +12,26 @@ a {
 	height: 0;
 }
 
+::-webkit-scrollbar {
+	width: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+	background-color: #2a2a2a;
+}
+
+::-webkit-scrollbar-thumb:hover {
+	background-color: #1c1c1c;
+}
+
+::-webkit-scrollbar-track {
+	background-color: transparent;
+}
+
+::-webkit-scrollbar-corner {
+	background-color: transparent;
+}
+
 summary {
 	font-family: "JetBrains Mono", monospace;
 }
