--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -7,7 +7,7 @@
 @layer utilities {
 	@variants dark {
 		.header {
-			background-image: url(https://www.igeeksblog.com/wp-content/uploads/2020/06/macos-big-sur-vector-wave-light-wallpaper-scaled.jpg);
+			background-image: url(https://wallpapercave.com/wp/wp7542081.jpg);
 			background-size: 100% 100%;
 			background-clip: text;
 			-webkit-background-clip: text;
@@ -15,7 +15,7 @@
 		}
 
 		.header-dark {
-			background-image: url(https://www.igeeksblog.com/wp-content/uploads/2020/06/macos-big-sur-vector-wave-dark-wallpaper-scaled.jpg);
+			background-image: url(https://wallpapercave.com/wp/wp7542097.jpg);
 			background-size: 100% 100%;
 			background-clip: text;
 			-webkit-background-clip: text;
