--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -4,20 +4,6 @@
 
 @layer utilities {
     @variants dark {
-        .dots-dark {
-            background-image: radial-gradient(rgba(227,227,227,0.4) 1px,transparent 0), radial-gradient(rgba(227,227,227,0.4) 1px,transparent 0);
-
-            background-position: 0 0,25px 25px;
-            background-attachment: fixed;
-            background-size: 50px 50px;
-        }
-        .dots {
-            background-image: radial-gradient(rgba(227,227,227,1) 1px,transparent 0), radial-gradient(rgba(227,227,227,1) 1px,transparent 0);
-
-            background-position: 0 0,25px 25px;
-            background-attachment: fixed;
-            background-size: 50px 50px;
-        }
         .dark-select ::selection {
             background-color: #f81ce5;
             color: #fff;
@@ -26,5 +12,13 @@
             background-color: #79ffe1;
             color: #000;
         }
+    }
+
+    .bg-pos-\[0-25\] {
+         background-position: 0 0,25px 25px;
+     }
+
+    .bg-size-\[50px\] {
+        background-size: 50px 50px;
     }
 }
