--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -12,7 +12,88 @@
             background-color: #79ffe1;
             color: #000;
         }
+
+        .message {
+            border-radius: 20px;
+            padding: 8px 15px;
+            margin-top: 5px;
+            margin-bottom: 5px;
+            display: inline-block;
+
+            align-items: flex-start;
+
+            background-color: #EEE;
+            color: black;
+            position: relative;
+        }
+
+        .message:before {
+            content: "";
+            position: absolute;
+            z-index: 0;
+            bottom: 0;
+            left: -7px;
+            height: 20px;
+            width: 20px;
+            background: #EEE;
+            border-bottom-right-radius: 15px;
+        }
+
+        .message:after {
+            content: "";
+            position: absolute;
+            z-index: 1;
+            bottom: 0;
+            left: -10px;
+            width: 10px;
+            height: 20px;
+            transition-duration: 240ms;
+            background: white;
+            border-bottom-right-radius: 10px;
+        }
+
+        .message-dark {
+            border-radius: 20px;
+            padding: 8px 15px;
+            margin-top: 5px;
+            margin-bottom: 5px;
+            display: inline-block;
+
+            align-items: flex-start;
+
+            background-color: #26252A;
+            color: white;
+            position: relative;
+        }
+
+        .message-dark:before {
+            content: "";
+            position: absolute;
+            z-index: 0;
+            bottom: 0;
+            left: -7px;
+            height: 20px;
+            width: 20px;
+            background: #26252A;
+            border-bottom-right-radius: 15px;
+        }
+
+        .message-dark:after {
+            content: "";
+            position: absolute;
+            z-index: 1;
+            bottom: 0;
+            left: -10px;
+            width: 10px;
+            height: 20px;
+            transition-duration: 240ms;
+            background: black;
+            border-bottom-right-radius: 10px;
+        }
     }
+
+
+
 
     .bg-pos-\[0-25\] {
          background-position: 0 0,25px 25px;
