chore: translation pt. 1

--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 @layer utilities {
-    @variants dark {
+    @layer dark {
         .dark-select ::selection {
             background-color: #f81ce5;
             color: #fff;
