fix: sizing and whatnot

--- a/app/globals.css
+++ b/app/globals.css
@@ -10,9 +10,8 @@
 
 body {
   color: var(--foreground);
-  /* background: var(--background); */
   background: var(--background);
-  /* background-image: url('/bg.jpg'); */
+  background-image: url('/bg.png');
 }
 
 .select-none {
