feat: blur circle

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,7 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-
 :root {
   --background: #0a0a0a;
   --foreground: #ededed;
@@ -11,7 +10,7 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  background-image: url('/bg.png');
+  background-image: url("/bg.png");
 }
 
 .blurred {
@@ -27,7 +26,36 @@ body {
 
 .gradient {
   background-color: hsla(119, 92%, 60%, 1);
-  background-image: radial-gradient(circle at 96% 96%, hsla(337, 93%, 54%, 0.85) 5%, transparent 86%), radial-gradient(circle at 5% 90%, hsla(151, 71%, 68%, 1) 13%, transparent 65%), radial-gradient(circle at 57% 73%, hsla(230, 93%, 51%, 1) 3%, transparent 89%), radial-gradient(circle at 20% 4%, hsla(240, 60%, 76%, 1) 22%, transparent 56%), radial-gradient(circle at 74% 15%, hsla(246, 92%, 59%, 1) 13%, transparent 57%);
+  background-image:
+    radial-gradient(
+      circle at 96% 96%,
+      hsla(337, 93%, 54%, 0.85) 5%,
+      transparent 86%
+    ),
+    
+    radial-gradient(
+      circle at 5% 90%,
+      hsla(151, 71%, 68%, 1) 13%,
+      transparent 65%
+    ),
+    
+    radial-gradient(
+      circle at 57% 73%,
+      hsla(230, 93%, 51%, 1) 3%,
+      transparent 89%
+    ),
+    
+    radial-gradient(
+      circle at 20% 4%,
+      hsla(240, 60%, 76%, 1) 22%,
+      transparent 56%
+    ),
+    
+    radial-gradient(
+      circle at 74% 15%,
+      hsla(246, 92%, 59%, 1) 13%,
+      transparent 57%
+    );
   background-blend-mode: normal, normal, normal, normal, normal;
 }
 
@@ -53,12 +81,12 @@ legend {
 
 .outbound {
   text-decoration: underline;
-  text-decoration-thickness: .25rem;
+  text-decoration-thickness: 0.25rem;
   text-decoration-color: rgb(209 213 219);
   cursor: pointer;
 }
 
-.bgrid{
+.bgrid {
   display: flex;
   height: 100%;
   width: 100%;
@@ -68,11 +96,11 @@ legend {
   mix-blend-mode: difference;
 }
 
-.bgrid .bcolumn{
+.bgrid .bcolumn {
   width: 5vw;
 }
 
-.bcolumn div{
+.bcolumn div {
   width: 100%;
   height: 5vw;
   /* border: 1px solid red; */
